--- a/template.yaml
+++ b/template.yaml
@@ -31,7 +31,7 @@ Resources:
         ScheduledEvent:
           Type: Schedule
           Properties:
-            Schedule: rate(2 minutes)
+            Schedule: rate(1 day)
             Enabled: True
       Environment:
         Variables:
